docs(guides): fix usage of kickstartDS CLI after update

--- a/packages/tools/docusaurus/docs/guides/create/components.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/components.mdx
@@ -8,7 +8,7 @@ import Admonition from 'react-admonitions';
 
 Now we'll get to the meat of it... adding your first set of components based on **kickstartDS**. Which ones you'll utimately need, and subsequentially build, can vary wildly based on your specific Design System needs. We'll add some exemplary ones now, to illustrate the main ways on offer to do this:
 
-- **`Button`** based on `@kickstartds/base/lib/button`:<br/>**Adopt** existing component, with a reduced set of props. Demo `Provider` and replacement in other components
+- **`Button`** based on `@kickstartds/base/lib/button`:<br/>**Adapt** existing component, with a reduced set of props. Demo `Provider` and replacement in other components
 - **`Headline`** based on `@kickstartds/base/lib/headline`:<br/>**Adapt** existing component (with a reduced set of props), add custom field `switchOrder`
 - **`Teaser Card`** based on `@kickstartds/base/lib/teaser-box`:<br/>**Adapt** existing component (with a reduced set of props), reduce complexity by making `link` a simple string... hard-code rest of `Button` props
 - **`Section`** based on `@kickstartds/base/lib/section`:<br/>**Adapt** existing component (with a reduced set of props), add custom `background` to showcase extending existing property / `enum`. Also add `link` (display at the end of the `Section`), and let it take multiple entries (1. primary / 2. secondary / 3.+ outline / ghost)
