docs(guides): add structure to remaining components in main guide

--- a/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
@@ -17,13 +17,16 @@ TODO describe workflow this stands for (adapt vs adopt)
 
 ### Structure
 
-## 2. Component Mapping
+| Property      | Description                              |
+| ------------- | ---------------------------------------- |
+| `level *`     | Level of headline to use                 |
+| `style`       | Style of headline to show                |
+| `text *`      | Text content of headline                 |
+| `sub`         | (Optional) Subheadline content           |
+| `switchOrder` | Switch order of headline and subheadline |
+| `spaceAfter`  | (Optional) spacing after headline        |
 
-### Match it
-
-### Adjustments
-
-## 3. Component Creation
+## 2. Component Creation
 
 ### JSON Schema
 
@@ -34,5 +37,7 @@ TODO describe workflow this stands for (adapt vs adopt)
 ## Completed component
 
 ## Technical debt
+
+## Advanced `allOf` / `$ref` variant of JSON Schema
 
 ## Open TODOs
