--- a/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
@@ -17,13 +17,22 @@ TODO describe workflow this stands for (adapt vs adopt)
 
 ### Structure
 
-## 2. Component Mapping
+| Property      | Description                       |
+| ------------- | --------------------------------- |
+| `headline`    | Headline for the section          |
+| `width`       | Width of section                  |
+| `gutter`      | Gutter of section                 |
+| `mode`        | Layout mode for section           |
+| `content`     | Allowed content for the section   |
+| `style`       | Style variation of section        |
+| `spaceBefore` | (Optional) space before section   |
+| `spaceAfter`  | (Optional) space after section    |
+| `inverted`    | Show inverted version of section? |
+| `ctas`        | Optional targets to link          |
 
-### Match it
+TODO should probably make sub fields of `ctas` explicit in table
 
-### Adjustments
-
-## 3. Component Creation
+## 2. Component Creation
 
 ### JSON Schema
 
@@ -34,5 +43,7 @@ TODO describe workflow this stands for (adapt vs adopt)
 ## Completed component
 
 ## Technical debt
+
+## Advanced `allOf` / `$ref` variant of JSON Schema
 
 ## Open TODOs
