--- a/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
@@ -17,13 +17,15 @@ TODO describe workflow this stands for (adapt vs adopt)
 
 ### Structure
 
-## 2. Component Mapping
+| Property     | Description                          |
+| ------------ | ------------------------------------ |
+| `headline *` | Headline for the teaser card         |
+| `text *`     | Body text for the teaser card        |
+| `image`      | (Optional) image to display as cover |
+| `inverted`   | Show inverted version of card?       |
+| `target *`   | Target that should be linked         |
 
-### Match it
-
-### Adjustments
-
-## 3. Component Creation
+## 2. Component Creation
 
 ### JSON Schema
 
@@ -34,5 +36,7 @@ TODO describe workflow this stands for (adapt vs adopt)
 ## Completed component
 
 ## Technical debt
+
+## Advanced `allOf` / `$ref` variant of JSON Schema
 
 ## Open TODOs
