docs(bedrock): add examples to bedrock page

--- a/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
@@ -182,7 +182,7 @@ TODO: update gutter Token in KickstartDS
 
 `mode: list`
 
-<div className="component-preview">
+<div className="layout-preview">
   <CH.Preview>
     <Section
      ks-theme="preview"
@@ -350,7 +350,7 @@ TODO: update gutter Token in KickstartDS
 `mode: tile`<br/>
 `--l-section_col--min-width: 14rem`<br/>
 
-<div className="component-preview" ks-theme="preview">
+<div className="layout-preview" ks-theme="preview">
 <CH.Preview>
   <Section
     className="content-nav"
@@ -709,7 +709,7 @@ TODO: update gutter Token in KickstartDS
 `mode: tile`<br/>
 `--l-section_col--min-width: 14rem`<br/>
 
-<div className="component-preview" >
+<div className="layout-preview" >
   <CH.Preview>
     <Section ks-theme="preview" width="full" spaceBefore="none" spaceAfter="none">
       <Storytelling
