--- a/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
@@ -108,7 +108,7 @@ This only gives us a rough sketch, though. We still need to adjust the example c
 
 <CH.Scrollycoding>
 <CH.Preview>
-<div className="component-preview" ks-theme="preview">
+<div className="layout-preview" ks-theme="preview">
   <StorytellingProvider>
     <Storytelling
       box={{
@@ -237,7 +237,7 @@ export default function App() {
 ```
 
 <CH.Preview>
-  <div className="component-preview" ks-theme="preview">
+  <div className="layout-preview" ks-theme="preview">
     <Storytelling
       box={{
         headline: {
@@ -290,7 +290,7 @@ export default function App() {
 ```
 
 <CH.Preview>
-  <div className="component-preview" ks-theme="preview">
+  <div className="layout-preview" ks-theme="preview">
     <Storytelling
       backgroundColor="#06566A"
       backgroundImage="https://www.kickstartDS.com/img/recipes/graphics--bg.svg"
@@ -349,7 +349,7 @@ export default function App() {
 ```
 
 <CH.Preview>
-<div className="component-preview" ks-theme="preview">
+<div className="layout-preview" ks-theme="preview">
   <Storytelling
     backgroundColor="#06566A"
     backgroundImage="https://www.kickstartDS.com/img/recipes/graphics--bg.svg"
