docs(guides): add more content to main guide, clean up other areas a bit

--- a/packages/tools/docusaurus/docs/guides/create/design.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/design.mdx
@@ -122,7 +122,7 @@ Get the most up-to-date version of its content [from here](https://github.com/ki
   in case this guide gets outdated!
 </Admonition>
 
-### Select Branding Token
+### Select **Branding Token**
 
 For a more in-depth overview of this process, have a look at our [Generate Token Set guide](../theming/generate-token-set.md) or the [concepts page about **Branding Token**](../../concepts/token/branding-token.md), detailing all values in use.<br/>
 
@@ -145,7 +145,7 @@ But to get a first feel for working with the file, and to add some flavour to ou
 TODO add presenters for token values to make this nicer<br/>
 TODO **really** think again about adding a demo theme to make this whole guide less confusing
 
-### Apply Branding Token
+### Apply **Branding Token**
 
 So let's get right into it, customizing step by step:
 
@@ -849,7 +849,7 @@ You'll only use this mechanism when first setting up your tokens. It's meant to 
 
 To learn more about the categories represented by those generated files, have a look at [our foundations page about them](../../foundations/token/design-token/index.md).
 
-### Compile **Design Token**
+### Compile **Design Token** set
 
 Finally, to test the integration works as expected, we'll first want to create one additional file: `sd.config.js`. As the name may imply, this is further configuration for our **Design Token**, to convert them into different outputs (more specifically the Style Dictionary that gets used under the hood):
 
