--- a/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 2
-sidebar_label: Adapt Headline component
+sidebar_label: Customize Headline component
 ---
 
-# Adapt `Headline` component
+# Customize `Headline` component
 
 TODO describe workflow this stands for (adapt vs adopt)
 
@@ -28,11 +28,11 @@ TODO describe workflow this stands for (adapt vs adopt)
 
 ## 2. Component Creation
 
-### JSON Schema
+### **JSON Schema** definition
 
-### Template
+### **React** Template
 
-## Use of `Storybook`
+## Use of **Storybook**
 
 ## Completed component
 
