--- a/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
@@ -11,7 +11,7 @@ import { StorytellingProvider } from '@kickstartds/design-system/dist/components
 
 # Create `Interstitial` component
 
-This also serves as an example on how repurposing an existing component can look like. Meaning: take an existing component, find a fitting new name for the use case, and give it a new purpose by greatly restricting its options for the new context. Read more in our guide on the ways of creating components (TODO add link to guide).
+This will serve as an example on how repurposing an existing component can look like. Meaning: take an existing component, find a fitting new name for the use case, and give it a new purpose by greatly restricting its options for the new context. Read more in our guide on the ways of creating components (TODO add link to guide).
 
 This also means that, for this example, we'll get by without any additional styling needed. We'll live off of everything already set in place by our existing Design Token and component structure.
 
@@ -180,8 +180,7 @@ export default function App() {
           size: 'medium',
           variant: 'solid',
         },
-        text:
-          'Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.',
+        text: 'Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.',
         textAlign: 'left',
         vAlign: 'center',
       }}
