--- a/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/section.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 4
-sidebar_label: Adapt Section component
+sidebar_label: Extend Section component
 ---
 
-# Adapt `Section` component
+# Extend `Section` component
 
 TODO describe workflow this stands for (adapt vs adopt)
 
@@ -34,11 +34,11 @@ TODO should probably make sub fields of `ctas` explicit in table
 
 ## 2. Component Creation
 
-### JSON Schema
+### **JSON Schema** definition
 
-### Template
+### **React** Template
 
-## Use of `Storybook`
+## Use of **Storybook**
 
 ## Completed component
 
