--- a/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 3
-sidebar_label: Adapt Teaser Box component
+sidebar_label: Create Teaser Card component
 ---
 
-# Adapt `Teaser Box` component as `Teaser Card`
+# Create `Teaser Card` component
 
 TODO describe workflow this stands for (adapt vs adopt)
 
@@ -27,11 +27,11 @@ TODO describe workflow this stands for (adapt vs adopt)
 
 ## 2. Component Creation
 
-### JSON Schema
+### **JSON Schema** definition
 
-### Template
+### **React** Template
 
-## Use of `Storybook`
+## Use of **Storybook**
 
 ## Completed component
 
