fix(docs): update docusaurus, rest of dependencies, maybe fix ci

--- a/packages/tools/docusaurus/docs/guides/create/design.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/design.mdx
@@ -124,7 +124,7 @@ Get the most up-to-date version of its content [from here](https://github.com/ki
 
 ### Select **Branding Token**
 
-For a more in-depth overview of this process, have a look at our [Generate Token Set guide](../theming/generate-token-set.md) or the [concepts page about **Branding Token**](../../concepts/token/branding-token.md), detailing all values in use.<br/>
+For a more in-depth overview of this process, have a look at our [Generate Token Set guide](../theming/generate-token-set.md) or the [foundations page about **Branding Token**](../../foundations/token/branding-token.mdx), detailing all values in use.<br/>
 
 But to get a first feel for working with the file, and to add some flavour to our Design System, we'll change some select values around. And feel free to replace everything with values that seem more appropriate for you, or that fit your particular brand (maybe even because you opted to follow the more detailed guide above). If you're wondering which values we selected for this guide... we're mostly matching our own brand for this guide:
 
