docs(guides): slight reorg

--- a/packages/tools/docusaurus/docs/guides/components/adapt.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/adapt.mdx
@@ -41,9 +41,11 @@ TODO describe Adaptation process
 
 ### 2. Component Creation
 
-#### JSON Schema
+#### **JSON Schema** definition
 
-#### React Template
+#### **React** Template
+
+## Technical debt
 
 ## Examples
 
@@ -53,7 +55,7 @@ We continuously expand our [component example guides](../examples/components/ind
 
 In [this example component guide](../examples/components/button.mdx) we adapt the `Button` component (as part of the `@kickstartDS/base` module) to use it for buttons in our own Design System. We drastically reduce the options used, and offered, in our own adaptation. We remove all options that include having an `Icon` displayed as part of the `Button`, for example.
 
-This is what the result looks like:
+This is what the result looks like (TODO replace with preview from real Storybook, not ours):
 
 <iframe
   src="https://60dc476b80673e003b4258d6-czyzkgbgek.chromatic.com/iframe.html?args=&id=base-button--solid&viewMode=story"
