docs(token): worked on generic content

--- a/packages/tools/docusaurus/docs/foundations/token/component-token.mdx
+++ b/packages/tools/docusaurus/docs/foundations/token/component-token.mdx
@@ -4,6 +4,8 @@ sidebar_position: 3
 
 # Component Token
 
-Component Token are an exhaustive representation of every value associated with a specific component. They by default inherit from [design Token](/docs/basics/token/design-token). Whenever possible, we recommend to keep pointing these to the foundational Token, rather than change into hard values such as hex codes. Nevertheless you can use these to fully match a component's appearance to a given design layout or specification.
+Component Token are a representation of values associated with a specific component. They by default inherit from [Design Token](/docs/basics/token/design-token). Whenever possible, we recommend to keep pointing these to the foundational token, rather than change into hard values such as hex codes. Nevertheless you can use these to fully match a components appearance to a given design layout or specification.
 
-## TODO add screenshot Storybook Component Token Addon, link
+<img src={require('./design-token/assets/docs_component-token-addon.png').default} alt="Screenshot of Storybook showing a kickstartDS component applying component token through an addon" />
+
+Screenshot to illustrate the use of token on component level.
